# sdl-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
games/: CMakeLists.txt
games/boring-example/: CMakeLists.txt  boring_example.cpp  config.yml
games/fibonacci-spiral/: CMakeLists.txt
games/fibonacci-spiral/include/: fibonacci_spiral.hpp  gameplay_settings.hpp  spiral_params.hpp
games/fibonacci-spiral/resources/: fibonacci.yaml  spiral.yaml  system.yaml
games/fibonacci-spiral/resources/spirals/: blue.yaml  peach.yaml
games/fibonacci-spiral/src/: sketch.cpp
games/void-muncher/: .gitignore  CMakeLists.txt
games/void-muncher/include/: muncher.hpp
games/void-muncher/include/basic-components/: basic_components.hpp
games/void-muncher/include/basic-movement/: movement.hpp
games/void-muncher/include/colored-squares/: colored_square.hpp
games/void-muncher/include/game/: munchable_system.hpp  world_system.hpp
games/void-muncher/include/input/: axis2d.hpp  keyboard_axis.hpp
games/void-muncher/include/input/keyboard-axis/: keyboard_axis.hpp
games/void-muncher/include/mechanics/: components.hpp  math.hpp  movement.hpp  player_controller.hpp
games/void-muncher/include/movement/: constant_mover.hpp
games/void-muncher/include/player/: muncher.hpp
games/void-muncher/include/visuals/: colored_square.hpp
games/void-muncher/include/void-muncher/: munch_system.hpp  munchable_system.hpp  player_controller.hpp
games/void-muncher/include/world-system/: world_system.hpp
games/void-muncher/resources/: munchables.yaml  muncher.yaml  score-widget.yaml  scoring-system.yaml  system.yaml
games/void-muncher/src/: void_muncher.cpp
games/void-muncher/src/basic-components/: CMakeLists.txt
games/void-muncher/src/basic-movement/: CMakeLists.txt  movement.cpp
games/void-muncher/src/colored-squares/: CMakeLists.txt  colored_square.cpp
games/void-muncher/src/game/: munchable_system.cpp  world_system.cpp
games/void-muncher/src/input/: keyboard_axis.cpp
games/void-muncher/src/input/keyboard-axis/: CMakeLists.txt  keyboard_axis.cpp
games/void-muncher/src/mechanics/: movement.cpp  player_controller.cpp
games/void-muncher/src/visuals/: colored_square.cpp
games/void-muncher/src/void-muncher/: munch_system.cpp  munchable_system.cpp  player_controller.cpp
games/void-muncher/src/world-system/: CMakeLists.txt  world_system.cpp
include/pi/config/: assets.hpp  color.hpp  errors.hpp  meta.hpp  paths.hpp  primitives.hpp
include/pi/config/flags/: init_flags.hpp  renderer_flags.hpp  window_flags.hpp
include/pi/containers/: lookup_table.hpp
include/pi/events/: event_sink.hpp
include/pi/meta/: color.hpp  reflect.hpp
include/pi/systems/: init_params.hpp  init_system.hpp  renderer_params.hpp  renderer_system.hpp  sdl_deleter.hpp  window_params.hpp  window_system.hpp
pi/: CMakeLists.txt  pi-config.cmake.in
pi/include/glad/: glad.h
pi/include/pi/: config.hpp  containers.hpp  events.hpp  everything.hpp  lookup_table.hpp  paths.hpp  primitives.hpp  sdl_deleter.hpp  system.hpp  window_params.hpp
pi/include/pi/algorithm/: primitives.hpp
pi/include/pi/config/: error_messages.hpp  flags.hpp  paths.hpp  renderer_params.hpp  window_params.hpp
pi/include/pi/config/sdl_primitives/: flags.hpp  point.hpp  renderer_flags.hpp  window_flags.hpp
pi/include/pi/events/: event_sink.hpp
pi/include/pi/primitives/: config.hpp
pi/include/pi/primitives/config/: flags.hpp  window_flags.hpp
pi/include/pi/reflection/: color.hpp  reflect.hpp
pi/include/pi/sdl-resources/: renderer_params.hpp  sdl_deleter.hpp  sdl_handle.hpp  sdl_params.hpp
pi/include/pi/sdl-systems/: init_params.hpp  init_system.hpp  renderer_params.hpp  renderer_system.hpp  sdl_deleter.hpp  sdl_system.hpp  window_params.hpp  window_system.hpp
pi/include/pi/system/: config.hpp  system.hpp  window.hpp
pi/include/pi/system/config/: renderer_params.hpp  window_params.hpp
pi/include/pi/yaml-config/: assets.hpp  color.hpp  convert_flags.hpp  errors.hpp  meta.hpp  paths.hpp  primitives.hpp
pi/include/pi/yaml-config/flags/: renderer_flags.hpp  window_flags.hpp
pi/src/algorithm/: CMakeLists.txt  pi-algorithm-config.cmake
pi/src/containers/: CMakeLists.txt  pi-containers-config.cmake
pi/src/events/: CMakeLists.txt  event_sink.cpp  pi-events-config.cmake
pi/src/graphics/: glad.c
pi/src/graphs/: CMakeLists.txt  pi-graphs-config.cmake
pi/src/reflection/: CMakeLists.txt  pi-reflection-config.cmake
pi/src/sdl-resources/: CMakeLists.txt  pi-sdl-resources-config.cmake  renderer_params.cpp  sdl_deleter.cpp  sdl_handle.cpp  sdl_params.cpp  window_params.cpp
pi/src/sdl-systems/: CMakeLists.txt  init_params.cpp  init_system.cpp  pi-sdl-systems-config.cmake  renderer_params.cpp  renderer_system.cpp  sdl_deleter.cpp  sdl_system.cpp  window_params.cpp  window_system.cpp
pi/src/system-graph/: CMakeLists.txt  pi-system-graph-config.cmake
pi/src/yaml-config/: CMakeLists.txt  assets.cpp  color.cpp  errors.cpp  meta.cpp  paths.cpp  pi-yaml-config-config.cmake
regular-polygons/: CMakeLists.txt
regular-polygons/include/poly/: system.hpp
regular-polygons/resources/: config.yml
regular-polygons/src/: sketch.cpp
regular-polygons/src/poly/: system.cpp
src/pi/events/: CMakeLists.txt  event_sink.cpp
tech-plans/: subsystems.md
